--- a/templates/admin/product/list.html.twig
+++ b/templates/admin/product/list.html.twig
@@ -31,7 +31,7 @@
                             <td>{{ product.id }}</td>
                             <td></td>
                             <td>{{ product.title }}</td>
-                            <td>{{ product.price }}</td>
+                            <td>{{ product.price|format_currency('USD') }}</td>
                             <td>{{ product.quantity }}</td>
                             <td>
                                 {% set images = product.getProductImages().getValues() %}
