--- a/templates/main/product/show.html.twig
+++ b/templates/main/product/show.html.twig
@@ -60,6 +60,17 @@
                 </div>
             </div>
         </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    {{ render(controller('App\\Controller\\Main\\EmbedController::showSimilarProducts', {
+                        'productCount': 4,
+                        'categoryId': product.category.id
+                    })) }}
+                </div>
+            </div>
+        </div>
     </div>
 
 {% endblock %}
