--- a/templates/main/category/show.html.twig
+++ b/templates/main/category/show.html.twig
@@ -35,7 +35,7 @@
                                                        class="product-image">
                                                 </a>
                                                 <div class="product-actions">
-                                                    <a href="#" class="btn-add-to-cart">
+                                                    <a onclick="addProductToCart('{{ product.uuid }}')" href="#" class="btn-add-to-cart">
                                                         add to cart
                                                     </a>
                                                 </div>
@@ -58,5 +58,19 @@
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block javascripts %}
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script>
+        const urlSaveProductToCart = '{{ path("main_api_cart_save") }}';
+
+        function addProductToCart(uuid) {
+            const formData = new FormData();
+            formData.append('productId', uuid);
+
+            axios.post(urlSaveProductToCart, formData);
+        }
+    </script>
 {% endblock %}
 
