--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -8,10 +8,10 @@
     <meta name="keywords" content="{% block page_keywords %}clothes, jackets, jeans{% endblock %}">
     <meta name="description" content="{% block page_description %}clothes, jackets, jeans{% endblock %}">
     <link rel="icon" type="image/x-icon" href="{{ asset('build/images/icons/favicon.ico') }}" />
-    <link rel="stylesheet" href="{{ asset('build/section-admin.728a21a0.css') }}">
+    {{ encore_entry_link_tags('section-admin') }}
     {% block stylesheets %}{% endblock %}
 </head>
 
     {% block layout_body %}{% endblock %}
-    <script src="{{ asset('build/section-admin.e07769c5.js') }}"></script>
+    {{ encore_entry_script_tags('section-admin') }}
 </html>
