--- a/templates/main/base.html.twig
+++ b/templates/main/base.html.twig
@@ -8,7 +8,7 @@
     <meta name="keywords" content="{% block page_keywords %}clothes, jackets, jeans{% endblock %}">
     <meta name="description" content="{% block page_description %}clothes, jackets, jeans{% endblock %}">
     <link rel="icon" type="image/x-icon" href="{{ asset('build/images/icons/favicon.ico') }}" />
-    <link rel="stylesheet" href="{{ asset('build/styles.css') }}">
+    {{ encore_entry_link_tags('section-main') }}
     {% block stylesheets %}{% endblock %}
 </head>
 
@@ -27,6 +27,7 @@
     {% include 'main/_embed/_footer.html.twig' %}
 </div>
 
+{{ encore_entry_script_tags('section-main') }}
 {% block javascripts %}{% endblock %}
 </body>
 </html>
