Created menu-cart-app (Vuejs)

--- a/templates/main/_embed/_menu/_desktop_menu.html.twig
+++ b/templates/main/_embed/_menu/_desktop_menu.html.twig
@@ -39,11 +39,8 @@
                     <div>Login</div>
                 </a>
             </li>
-            <li class="menu-item font-weight-bold">
-                <a href="{{ path('main_cart_show') }}">
-                    <div>Cart</div>
-                </a>
-            </li>
         </ul>
     </nav>
+
+    {{ include('main/_embed/_menu/_menu_cart.html.twig') }}
 </div>
