--- a/templates/main/category/show.html.twig
+++ b/templates/main/category/show.html.twig
@@ -61,15 +61,11 @@
 {% endblock %}
 
 {% block javascripts %}
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script>
-        const urlSaveProductToCart = '{{ path("main_api_cart_save") }}';
-
         function addProductToCart(uuid) {
-            const formData = new FormData();
-            formData.append('productId', uuid);
-
-            axios.post(urlSaveProductToCart, formData);
+            window.vueMenuCartInstance.addCartProduct({
+                uuid
+            })
         }
     </script>
 {% endblock %}
