--- a/templates/main/product/show.html.twig
+++ b/templates/main/product/show.html.twig
@@ -50,7 +50,7 @@
                             </div>
 
                             <div class="product-full-action">
-                                <a href="#" class="btn btn-link btn-dark">
+                                <a href="#" class="btn btn-link btn-dark" onclick="addProductToCart()">
                                     <i class="fas fa-cart-plus"></i>
                                     <span>add to cart</span>
                                 </a>
@@ -73,4 +73,20 @@
         </div>
     </div>
 
+{% endblock %}
+
+{% block javascripts %}
+    <script>
+        const productUuid = '{{ product.uuid }}';
+        const productQuantityEl = document.getElementById('product_full_filter_quantity');
+
+        function addProductToCart() {
+            const quantity = parseInt(productQuantityEl.value);
+
+            window.vueMenuCartInstance.addCartProduct({
+                uuid: productUuid,
+                quantity
+            })
+        }
+    </script>
 {% endblock %}
