--- a/templates/main/email/security/confirmation_email.html.twig
+++ b/templates/main/email/security/confirmation_email.html.twig
@@ -1,11 +1,29 @@
-<h1>Hi! Please confirm your email!</h1>
+{% extends 'main/email/base.html.twig' %}
 
-<p>
-    Please confirm your email address by clicking the following link: <br><br>
-    <a href="{{ signedUrl }}">Confirm my Email</a>.
-    This link will expire in {{ expiresAtMessageKey|trans(expiresAtMessageData, 'VerifyEmailBundle') }}.
-</p>
-
-<p>
-    Cheers!
-</p>
+{% block content %}
+    <row>
+        <columns>
+            <spacer size="35"></spacer>
+            <center>
+                <h1>Please confirm your email!</h1>
+            </center>
+            <spacer size="10"></spacer>
+        </columns>
+    </row>
+    <row>
+        <columns>
+            <p>
+                Please confirm your email address by clicking the following link: <br><br>
+                <a href="{{ signedUrl }}">Confirm my Email</a>.
+                This link will expire in {{ expiresAtMessageKey|trans(expiresAtMessageData, 'VerifyEmailBundle') }}.
+            </p>
+        </columns>
+    </row>
+    <row>
+        <columns>
+            <a href="{{ profileUrl }}" target="_blank">
+                Visit our homepage.
+            </a>
+        </columns>
+    </row>
+{% endblock %}
