--- a/templates/main/_embed/_menu/_desktop_menu.html.twig
+++ b/templates/main/_embed/_menu/_desktop_menu.html.twig
@@ -8,37 +8,45 @@
     </a>
     <nav class="main-nav">
         <ul class="menu">
-            <li class="menu-item">
-                <a href="{{ path('main_category_show', {'slug': 'jeans'}) }}">
-                    <div>Jeans</div>
-                </a>
-            </li>
-            <li class="menu-item">
-                <a href="{{ path('main_category_show', {'slug': 'hats'}) }}">
-                    <div>Hats</div>
-                </a>
-            </li>
-            <li class="menu-item">
-                <a href="{{ path('main_category_show', {'slug': 'jackets'}) }}">
-                    <div>Jackets</div>
-                </a>
-            </li>
-            <li class="menu-item">
-                <a href="{{ path('main_category_show', {'slug': 'dresses'}) }}">
-                    <div>Dresses</div>
-                </a>
-            </li>
-            <li class="menu-item">
-                <a href="{{ path('main_category_show', {'slug': 'sneakers'}) }}">
-                    <div>Sneakers</div>
-                </a>
-            </li>
+            {% include 'main/_embed/_menu/_menu_item.html.twig' with {
+                'targetRoute': 'main_category_show',
+                'slug': 'jeans',
+                'label': 'Jeans'
+            } %}
+            {% include 'main/_embed/_menu/_menu_item.html.twig' with {
+                'targetRoute': 'main_category_show',
+                'slug': 'hats',
+                'label': 'Hats'
+            } %}
+            {% include 'main/_embed/_menu/_menu_item.html.twig' with {
+                'targetRoute': 'main_category_show',
+                'slug': 'jackets',
+                'label': 'Jackets'
+            } %}
+            {% include 'main/_embed/_menu/_menu_item.html.twig' with {
+                'targetRoute': 'main_category_show',
+                'slug': 'dresses',
+                'label': 'Dresses'
+            } %}
+            {% include 'main/_embed/_menu/_menu_item.html.twig' with {
+                'targetRoute': 'main_category_show',
+                'slug': 'sneakers',
+                'label': 'Sneakers'
+            } %}
 
-            <li class="menu-item font-weight-bold">
-                <a href="{{ path('main_login') }}">
-                    <div>Login</div>
-                </a>
-            </li>
+            {% if app.user %}
+                {% include 'main/_embed/_menu/_menu_item.html.twig' with {
+                    'targetRoute': 'main_profile_index',
+                    'isBold': 1,
+                    'label': 'My profile'
+                } %}
+            {% else %}
+                {% include 'main/_embed/_menu/_menu_item.html.twig' with {
+                    'targetRoute': 'main_login',
+                    'isBold': 1,
+                    'label': 'Login'
+                } %}
+            {% endif %}
         </ul>
     </nav>
 
