--- a/templates/main/cart/show.html.twig
+++ b/templates/main/cart/show.html.twig
@@ -29,10 +29,12 @@
             window.staticStore = {};
         }
 
+        window.staticStore.isUserLoggedIn = {% if app.user %}true{% else %}false{% endif %};
         window.staticStore.urlCart = "{{ path('api_carts_get_collection') }}";
         window.staticStore.urlCartProduct = "{{ path('api_cart_products_get_collection') }}";
         window.staticStore.urlOrder = "{{ path('api_orders_get_collection') }}";
         window.staticStore.urlViewProduct = "{{ path('main_product_show_blank') }}";
+        window.staticStore.urlLoginPage = "{{ path('main_login') }}";
         window.staticStore.urlAssetImageProducts = "{{ asset('uploads/images/products') }}";
     </script>
     {{ encore_entry_script_tags('appMainCartShow') }}
